--- a/experiments/windows-0/windows-0.yml
+++ b/experiments/windows-0/windows-0.yml
@@ -1,3 +1,10 @@
+name: windows-0
+
+parameters:
+  batch_size: 3
+  epochs: 80
+  learning_rate: 0.001
+
 coco:
   train: 
     root: ../../data/coco/train2017
